# eslint-setup

./: README.md  TODO.md  pyproject.toml
src/eslint_setup/: main.py
